...
    }

    SettingsPage(
        title = stringResource(R.string.settings_about),
        onBack = onBack,
        shadingIcon = R.drawable.ic_symbol_info,
        modifier = modifier.testTag("about_screen"),
        backButtonModifier = Modifier.testTag("about_back"),
    ) {
        AboutHeader(packageInfo.versionName, PackageInfoCompat.getLongVersionCode(packageInfo))
        SettingsSection(title = stringResource(R.string.about_section_more)) {
            SettingsNavigationItem(
                title = stringResource(R.string.about_github),
                icon = R.drawable.ic_logo_github,
...
