...
    }

    FrostedScaffold(
        modifier = modifier
            .fillMaxSize()
            .nestedScroll(scrollBehavior.nestedScrollConnection)
            .testTag("settings_screen"),
        containerColor = ThemeColorDefaults.settingsBackgroundColor(),
        topBar = {
            Box {
                ShadingIcon(
                    icon = R.drawable.ic_symbol_settings,
                    modifier = Modifier.matchParentSize(),
...
                    offset = DpOffset(32.dp, 32.dp),
                )
                CollapsibleTopAppBar(
                    title = stringResource(R.string.me_settings),
                    onBack = onBack,
                    scrollBehavior = scrollBehavior,
                    backButtonModifier = Modifier.testTag("settings_back"),
                )
            }
        },
    ) { innerPadding ->
        Box(
            modifier = Modifier
...
